deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: retail-store-sample-app
  labels:
    app.kubernetes.io/name: retail-store-sample-app
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: retail-store-sample-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: retail-store-sample-app
    spec:
      containers:
        - name: app
          image: aws-retail-store-sample-app:0.0.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          ports:
            - containerPort: 8080
              name: http
