deploy/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: retail-store-sample-app
  labels:
    app.kubernetes.io/name: retail-store-sample-app
spec:
  ingressClassName: nginx
  rules:
    - host: retail-store-sample-app.example.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: retail-store-sample-app
                port:
                  number: 80
